--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "dependencies": {
         "@babel/plugin-transform-runtime": "^7.13.15",
         "axios": "^0.21.1",
+        "bootstrap": "^4.6.0",
         "css-loader": "^5.2.1",
         "history": "^4.10.1",
         "react": "^16.13.0",
+        "react-bootstrap": "^1.5.2",
         "react-dom": "^16.13.0",
         "react-icons": "^4.2.0",
         "react-redux": "^7.2.0",
