--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     },
     "license": "MIT",
     "scripts": {
-        "build": "webpack --mode production",
+        "build": "set PORT=8085 && webpack --mode production",
         "start": "webpack-dev-server --open"
     },
     "dependencies": {
